--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,9 @@
 
 
 
-<main class="main">
- <h1>Hello HelloHelloHelloHello</h1>
-</main>
+<body class="mat-typography mat-app-background">
+  <app-home-page></app-home-page>
+</body>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
