--- a/src/app/components/home-page/home-page.html
+++ b/src/app/components/home-page/home-page.html
@@ -30,11 +30,9 @@
     <div style="display: flex;flex-direction: column;gap: 20px;">
     
         <div>
-    
             <p>
                 <strong> LN COLLEGE OF PHARMACEUTICAL STUDIES </strong> is an indispensable part of LNCT Group of Colleges,
-                First
-                Self Financing Engineering College of North Central India.
+                First Self Financing Engineering College of North Central India.
             </p>
         </div>
     
