--- a/src/app/components/home-page/home-page.html
+++ b/src/app/components/home-page/home-page.html
@@ -23,7 +23,7 @@
 
  </div>
 
- <div style="padding:20px;line-height:0px;">
+ <!-- <div style="padding:20px;line-height:0px;">
     <h3 style="font-size: 18px;">Welcome to LNCPs, Indore</h3>
 
 
@@ -68,12 +68,7 @@ undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy, aiming to pr
 
         </div>
 
-        <div style="    justify-content: start;
-    bottom: 20px;
-    font-size: 16px;
-    position: absolute;
-    left: 50%;
-    display: flex;"><div>LNCP, Indore All right reserved!!</div></div>
+      
         
          
    
@@ -85,7 +80,53 @@ undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy, aiming to pr
  </div>
  
 
+</div> -->
+
+<div style="padding:20px">
+<mat-card class="example-card" appearance="outlined">
+  <mat-card-header>
+    <mat-card-title><h1 style="font-size: 22px;">Welcome to LNCPs, Indore</h1></mat-card-title>
+    <mat-card-subtitle style="line-height: 30px;">  <strong>LN COLLEGE OF PHARMACEUTICAL STUDIES (LNCPs COLLEGE)</strong> Indore, LN COLLEGE OF PHARMACEUTICAL STUDIES (LNCPs COLLEGE) Indore, LN COLLEGE OF PHARMACEUTICAL STUDIES is an indispensable part of LNCT Group of Colleges, First Self Financing Engineering College of North Central India.</mat-card-subtitle>
+  </mat-card-header>
+
+  <mat-card-content>
+
+    <div style="display: flex; gap: 50px;">
+    
+      <div style="flex: 0 0 40%;">
+    
+       <p style="line-height: 30px;"> <strong> LN COLLEGE OF PHARMACEUTICAL STUDIES, </strong>Indore established in 2022 , renowned as LNCPs college
+        indore for imparting the best quality of pharmaceutical education to create technical man power for special needs of
+        the industry at both home and abroad.
+        </p>
+        <p style="line-height: 30px;">
+    
+          <strong>LN COLLEGE OF PHARMACEUTICAL STUDIES (LNCPs COLLEGE) Indore,</strong> established in 2022, is a private
+          institution under the Rishiraj Singh Memorial Welfare Society. It's located along the RAU-Pithampur Road, A Head
+          IIM, Gram Bheslay, Indore and is affiliated with RGPV Bhopal. LNCP is approved by the Pharmacy Council of India
+          (PCI) and the (AICTE). The college offer undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy,
+          aiming to produce skilled graduates for the pharmaceutical industry.
+        </p>
+      </div>
+      <div>
+    
+        <img mat-card-image src="home.png" alt="Logo" style="    height: calc(60vh - 40px);
+        width: calc(100vw - 40px);
+       
+       
+        max-width: 100%;
+      " />
+        <p style="line-height: normal;">
+      </div>
+    </div>
+  
+  </mat-card-content>
+
+</mat-card>
+
 </div>
+
+
 
 </main>
 
@@ -111,11 +152,16 @@ undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy, aiming to pr
   </div>
 
  </div>
- <div style="padding:40px;line-height:30px;">
-    <h3 style="font-size: 16px;">PRINCIPAL'S MESSAGE,</h3>
-     <h3 style="font-size: 16px;">Dear Students, Parents, and Visitors,</h3>
 
-     <p>Welcome to LN College of Pharmaceutical Studies, a proud constituent of the LNCT Group—an institution that stands as a symbol of excellence, integrity, and commitment in the field of education.</p>
+ <div style="padding:20px;line-height:normal">
+ <mat-card class="example-card" appearance="outlined">
+  <mat-card-header>
+   
+    <mat-card-title>PRINCIPAL'S MESSAGE,</mat-card-title>
+    <mat-card-subtitle>Dear Students, Parents, and Visitors,</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+   <p>Welcome to LN College of Pharmaceutical Studies, a proud constituent of the LNCT Group—an institution that stands as a symbol of excellence, integrity, and commitment in the field of education.</p>
        <p>At L.N. College of Pharmaceutical Studies, we are dedicated to nurturing competent pharmacy professionals equipped with the knowledge, skills, and values essential to serve the healthcare sector with dedication and innovation. Our state-of-the-art infrastructure, experienced faculty, research-driven environment, and a student-centric approach ensure holistic development and academic excellence.</p>
          <p>We believe in empowering our students not just to succeed academically, but to become responsible citizens and ethical professionals. Through a blend of rigorous academics, hands-on training, and value-based learning, we strive to create an atmosphere where students can grow intellectually and personally.</p>
            <p>As the Principal of this esteemed institution, I take immense pride in being part of an organization that is shaping the future of healthcare and pharmaceutical sciences. I invite you to explore our website to learn more about our programs, achievements, and the vibrant life on our campus.</p>
@@ -125,14 +171,13 @@ undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy, aiming to pr
                <h3 style="font-size: 16px;">Dr. Amit Joshi</h3>
                 <h3 style="font-size: 16px;">Principal</h3>
                  <h3 style="font-size: 16px;">LN College of Pharmaceutical Studies, Indore</h3>
+  </mat-card-content>
+
+</mat-card>
  </div>
 
- <div style="    justify-content: start;
-    bottom: 20px;
-    font-size: 16px;
-    position: absolute;
-    left: 50%;
-    display: flex;"><div>LNCP, Indore All right reserved!!</div></div>
+
+
 
 </main>
 
@@ -141,8 +186,13 @@ undergraduate (B.Pharm) and Diploma (D.Pharm) programs in pharmacy, aiming to pr
 
  
  
- 
- 
+  <div style="position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:green;
+  color: white;
+  text-align: center;"><div>LNCP, Indore All right reserved!!</div></div>
  
   
 
